# Penguin

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Penguin_cmake.bat  Penguin_vs2017.bat  README.md  appveyor.yml  penguin.mwc  penguin_CI.mwc
MPC/config/: penguin.features  penguinexe.mpb  penguinlib.mpb
cmake/: FindD3D12.cmake  FindDXGI.cmake  FindVulkan.cmake
penguin/: CMakeLists.txt  Component.cpp  Component.h  Component_Container.cpp  Component_Container.h  Component_Container_Item.cpp  Component_Container_Item.h  Die.h  Dynamic_Library.cpp  Dynamic_Library.h  Exception.cpp  Exception.h  Language.h  Monitor.cpp  Monitor.h  Profiler.cpp  Profiler.h  Scoped_Timer.h  Semaphore.cpp  Semaphore.h  Timer.h  Unbounded_Queue.h  Version.h  penguin.mpc
samples/: CMakeLists.txt
samples/Container/: CMakeLists.txt  Sample_Container.cpp
samples/DirectX12/: CMakeLists.txt  Sample_DirectX12.cpp
samples/EclipseCalculator/: CMakeLists.txt  Die.h  main.cpp
samples/Vulkan/: Application.cpp  Application.h  CMakeLists.txt  Host_Synchronized.h  Sample_Vulkan.cpp  Vulkan_Config.h  Vulkan_Renderer.cpp  Vulkan_Renderer.h  Window.cpp  Window.h
tests/: CMakeLists.txt
tests/Component/: CMakeLists.txt  Test_Component.cpp  Test_Component.h
tests/Component_Container/: CMakeLists.txt  Test_Component_Container.cpp
tests/Dynamic_Library/: CMakeLists.txt  Test_Dynamic_Library.cpp
tests/Monitor/: CMakeLists.txt  Test_Monitor.cpp  Test_Monitor.mpc
tests/Profiler/: CMakeLists.txt  Test_Profiler.cpp  Test_Profiler.mpc
tests/Scoped_Timer/: CMakeLists.txt  Test_Scoped_Timer.cpp
tests/Semaphore/: CMakeLists.txt  Test_Semaphore.cpp  Test_Semaphore.mpc
tests/Timer/: CMakeLists.txt  Test_Timer.cpp
tests/Unbounded_Queue/: CMakeLists.txt  Test_Unbounded_Queue.cpp  Test_Unbounded_Queue.mpc
tests/Version/: CMakeLists.txt  Test_Version.cpp
